--- a/practice/pyproject.toml
+++ b/practice/pyproject.toml
@@ -5,8 +5,13 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "einops>=0.8.1",
+    "einx>=0.3.0",
     "ipykernel>=6.30.1",
+    "jaxtyping>=0.3.2",
     "pandas>=2.3.2",
+    "ruff>=0.13.1",
     "tiktoken>=0.11.0",
     "torch>=2.8.0",
+    "transformers>=4.56.2",
 ]
